Import of SANTERI/Tkx-SplashScreen-v0.1 from CPAN.
gitpan-cpan-distribution: Tkx-SplashScreen
gitpan-cpan-version:      v0.1
gitpan-cpan-path:         SANTERI/Tkx-SplashScreen-v0.1.tar.gz
gitpan-cpan-author:       SANTERI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Perl extension Tkx::SplashScreen.
 
-.10  Wed Mar 10 19:06:25 2010
+0.1  Wed Mar 10 20:29:41 2010
 	- original version; created by h2xs 1.23 with options
 		-AX -n Tkx::SplashScreen -v 0.1
 
