--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Tkx::SplashScreen.
 
+0.12 Wed Mar 10 22:17:03 2010
+    - Fixed Makefile.PL
+
 0.11 Wed Mar 10 21:44:15 2010
     - Updated
 
