--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Tkx::SplashScreen.
 
+0.15 Thu Apr 06 11:15 2010
+    - Fixed Makefile.PL
+
 0.14 Wed Apr 05 22:18 2010
     - Updated documentation
 
