--- a/README
+++ b/README
@@ -21,7 +21,7 @@ This module requires these other modules and libraries:
 
 LICENSE AND COPYRIGHT
 
-Copyright (C) 2009-2010 Alexander Nusov <cpan at sancode.net>
+Copyright (C) 2009-2010 Alexander Nusov <alexander.nusov+cpan <at> gmail.com>
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself.
